<resources>
    <string name="app_name">tc-andr-manage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_staff_edit">StaffEditActivity</string>
    <string name="ordering">待接单</string>
    <string name="order_disscuss">洽谈中</string>
    <string name="ordering_storagedetail">待入库</string>

    <string name="ordering_storage_ok">确认入库</string>
    <string name="ordering_detail">订单详情</string>
    <string name="ordering_autocode">单号:</string>
    <string name="ordering_code">手工单号:</string>
    <string name="detail_sendingAddr">发货地址:</string>
    <string name="detail_date">下单时间:</string>
    <string name="detail_receivingAddr">收货地址:</string>
    <string name="detail_payMethod">付款方式:</string>
    <string name="totalTransportFee">运费</string>
    <string name="totalStoringFee">进仓费</string>
    <string name="totalPickingFee">接货费</string>
    <string name="totalDeliveryFee">送货费</string>
    <string name="totalInsuranceFee">保费</string>

    <string name="totalFockFee">叉车费</string>
    <string name="totalLoadingFee">装卸费</string>
    <string name="totalOtherFee">其他费用</string>

    <string name="totalFee">费用合计</string>
    <string name="totalFee1">总计</string>
    <string name="btn_save">保存</string>
    <string name="btn_ok">确认</string>



    <!-- Toast String -->
    <string name="error_phone_num">手机号码不正确</string>
    <string name="user_not_exist">账号不存在</string>
    <string name="user_disable">账号已被禁用</string>
    <string name="wrong_password">用户名密码不匹配</string>
    <string name="network_error">网络错误</string>
    <string name="server_error">服务器错误</string>

    <!-- LoginFragment -->
    <string name="login">登入</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">注册</string>


    <!-- MissionFragment -->
    <string name="mission">任务</string>
    <string name="bill">开单</string>
    <string name="pickup_goods">待接送货</string>
    <string name="order">待接单</string>
    <string name="logistics">物流追踪</string>
    <string name="storage_and_stowage">库存与配载</string>

    <!-- MyHomeFragment -->
    <string name="my">我的</string>
    <string name="logout">退出登入</string>
    <string name="aboutTC">关于通灿物流宝</string>


    <!-- MyInfoFragment -->
    <string name="verify_idcard">身份证验证</string>
    <string name="idcard_front">身份证正面照</string>
    <string name="idcard_back">身份证反面照</string>
    <string name="name">姓名</string>
    <string name="input_your_name">尊姓大名</string>
    <string name="idcard_num">身份证号码</string>
    <string name="input_idcard">填写身份证号码</string>
    <string name="address">住址</string>
    <string name="input_address">填写地址</string>
    <string name="phone">手机号码</string>
    <string name="branch">所属网点</string>
    <string name="branch_a">网点A</string>
    <string name="modify_phone">修改手机号码</string>
    <string name="reset_psw">重置密码</string>

    <!--ResetPWFragment -->
    <string name="find_psw">找回密码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="remember_psw">想起密码了</string>

    <!--RegisterFragment -->
    <string name="input_password_again">请再次输入密码</string>


    <!--SendCarNotFragment -->
    <string name="order_num">订单数</string>
    <string name="volume">体积（方）</string>
    <string name="weight">重量（吨）</string>
    <string name="confirm">确定</string>
    <string name="order_no">单号:</string>
    <string name="order_no_manual">手工单号:</string>
    <string name="sending_addr">接货地址:</string>
    <string name="total_volume">体积：</string>
    <string name="volume_measure">方</string>
    <string name="total_wight">重量：</string>
    <string name="wight_measure">吨</string>

    <!--SendCarYesFragment -->
    <string name="cancel_send_car">取消派车</string>


    <!--SendCarListFragment -->
    <string name="send_car">派车</string>
    <string name="departure_time">出发时间</string>
    <string name="current_weight">载重：</string>
    <string name="receiving_fee">接货费（选填）</string>
    <string name="delivery_fee">送货费（选填）</string>
    <string name="yuan">元</string>
    <string name="map">地图</string>


    <!--SendCarMapFragment -->
    <string name="send_car_live">派车实况</string>
    <string name="order_no_2">订单号：</string>
    <string name="volume_remain">待配载体积:</string>
    <string name="send_to">送至</string>
    <string name="weight_2">重量：</string>


    <!--BillingFirstFragment -->
    <string name="input_billing_num">手动填写单号（选填）</string>
    <string name="addr">地址</string>
    <string name="contact">联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="choose_company_send">选择发货公司</string>
    <string name="need_pick">需要接货</string>
    <string name="reserve_pick_time">预约接货时间</string>
    <string name="choose_company_receive">选择收货公司</string>
    <string name="need_delivery">需要送货</string>
    <string name="receipt_method">回单方式</string>
    <string name="start_station">起运站</string>
    <string name="end_station">到达站</string>
    <string name="next">下一步</string>


    <!--BillingSecondFragment -->
    <string name="goods_name">货物名称</string>
    <string name="quantity">数量</string>
    <string name="package_name">包装名称</string>
    <string name="weight_prompt">重量（重量和体积至少填一项）</string>
    <string name="volume_prompt">体积（重量和体积至少填一项）</string>
    <string name="specification">规格</string>
    <string name="need_insurance">需要货物保险</string>
    <string name="goods_value">货值金额</string>
    <string name="value_insurance">保费</string>
    <string name="transport_fee">运费</string>
    <string name="confirm_add">确认添加</string>
    <string name="goods_add_already">已添加货物</string>

    <!--BillingThirdFragment -->
    <string name="payment_method">选择付款方式</string>
    <string name="sum">金额</string>
    <string name="payment_other">选择其他费用</string>
    <string name="cod">代收货款</string>
    <string name="account_name">开户名</string>
    <string name="bank_account">银行账号</string>
    <string name="loan">贷款</string>
    <string name="save">保存</string>
    <string name="confirm2">确认</string>


    <!--LogisticsFragment -->
    <string name="cancel">取消</string>
    <string name="sending_unit">发货方：</string>
    <string name="receiving_unit">收货方</string>
    <string name="goods">货物：</string>
    <string name="time">时间：</string>

    <!--ManageFragment -->
    <string name="manage">管理</string>
    <string name="manage_employees">员工管理</string>
    <string name="manage_car">车辆管理</string>
    <string name="manage_driver">司机管理</string>
    <string name="valuation_methods">计价方式</string>

    <!--ChangePhoneNumFragment -->
    <string name="confirm_modify">确认修改</string>
    <string name="input_new_phone">请输入新手机号</string>

</resources>
