<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    >
    <LinearLayout
        android:background="@color/basic_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:paddingLeft="10dp"
            android:id="@+id/imagev_turn_back"
            android:src="@mipmap/back"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:paddingRight="10dp"
                android:id="@+id/imagev_commit"
                android:src="@mipmap/my_check"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
       android:gravity="center_horizontal"
        android:background="@color/basic_background_color"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <ImageView
            android:id="@+id/iv_my_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/my_icon_big"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
    <TextView
        android:layout_gravity="center_vertical"
        style="@style/myinfo_text_style"
        android:text="@string/verify_idcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imagev_front"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:scaleType = "fitXY"
                android:src="@mipmap/my_idcard_front" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/idcard_front"
                style="@style/myinfo_text_style" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imagev_back"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:scaleType = "fitXY"
                android:src="@mipmap/my_idcard_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/idcard_back"
                style="@style/myinfo_text_style" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myinfo_text_style"
            android:text="@string/name"
            />
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_name"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_name"
            style="@style/myinfo_text_style"

            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myinfo_text_style"
            android:text="@string/idcard_num"
            />
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_idcard"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_idcard"
                style="@style/myinfo_text_style"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myinfo_text_style"
            android:text="@string/address"
            />
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_address"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_address"
                style="@style/myinfo_text_style"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myinfo_text_style"
            android:text="@string/phone"
            />
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_phone"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_phone_num"
                style="@style/myinfo_text_style"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myinfo_text_style"
            android:text="@string/branch"
            />
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myinfo_text_style"
                android:textColor="#969696"
                android:text="@string/branch_a"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_myinfo"
            android:text="@string/modify_phone"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="74dp" />

        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_myinfo"
            android:text="@string/reset_psw"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
             />
    </RelativeLayout>







</LinearLayout>